# loltoml

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  test.toml
examples/: CMakeLists.txt  dom.cpp  roundtrip.cpp  simple.cpp  toml-test-decoder.cpp
include/loltoml/: error.hpp  parse.hpp  version.hpp
include/loltoml/detail/: common.hpp  input_stream.hpp  parser.hpp
tests/: CMakeLists.txt  array.cpp  array_table.cpp  basic_string.cpp  boolean.cpp  comments.cpp  common.hpp  complex.cpp  datetime.cpp  empty.cpp  float.cpp  inline_table.cpp  integer.cpp  key.cpp  literal_string.cpp  multiline_literal_string.cpp  multiline_string.cpp  table.cpp  valid.cpp
